# pinaka

./: README.md  pyproject.toml
core/: tensor.py
docs/: pinaka_plan.md
pinaka/core/: tensor.py
pinaka/models/: linear.py
tests/core/: test_tensor.py
tests/models/: test_linear.py
