[project]
name = "pinaka"
version = "0.1.2"
description = "Lightweight ML Framework"
authors = [
    {name = "Chirag Juneja",email = "chiragjuneja6@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
packages=[{include = "pinaka"}]
dependencies = [
    "numpy (>=2.4.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
pythonpath = ["."]

